Bug 468294 - Kate crashes with active Compiler Explorer plugin
Summary: Kate crashes with active Compiler Explorer plugin
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-08 15:46 UTC by nekitos23
Modified: 2023-04-09 18:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace (3.11 KB, text/plain)
2023-04-08 15:52 UTC, nekitos23
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nekitos23 2023-04-08 15:46:19 UTC
SUMMARY
Kate crashes when minimizing/maximizing kate window and compiler explorer plugin is active.


STEPS TO REPRODUCE
1. Open any ".cpp" file in Kate.
2. Press "Ctrl + Alt + I" (Find Action).
3. Find "Open current file in Compiler Explorer" and click on it.
4. Compiler Explorer window occurs. String for compiler options is empty by default.
5. Minimize/Maximize Kate for a few times.
6. Crash.
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux: ubuntu 22.04.1 LTS
KDE Plasma Version: Version 5.24.7
KDE Frameworks Version: Version 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Plugin "Compiler Explorer" is activated.
The crash can be reproduced every time.
Comment 1 nekitos23 2023-04-08 15:52:20 UTC
Created attachment 157961 [details]
Backtrace

Add the backtrace.
Comment 2 Bug Janitor Service 2023-04-08 20:19:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1193
Comment 3 Waqar Ahmed 2023-04-08 23:21:32 UTC
Git commit 742aa0d06281620248dbc960d9e219a7532e59a7 by Waqar Ahmed.
Committed on 08/04/2023 at 20:19.
Pushed by waqar into branch 'master'.

CompilerExplorer: Fix crash when minimizing

Remove the hack for removing the activeView as xmlguiclient. Kate now
does that automatically whenever a non KTE::View is activated. We
just need to install ourself and remove when hiding.

M  +3    -26   addons/compiler-explorer/ce_widget.cpp
M  +0    -4    addons/compiler-explorer/ce_widget.h

https://invent.kde.org/utilities/kate/commit/742aa0d06281620248dbc960d9e219a7532e59a7
Comment 4 Waqar Ahmed 2023-04-09 18:38:26 UTC
Git commit 8d8d04feebe683a8fb3cb7925adca1bfdd9b21a0 by Waqar Ahmed.
Committed on 09/04/2023 at 18:36.
Pushed by waqar into branch 'release/23.04'.

CompilerExplorer: Fix crash when minimizing

Remove the hack for removing the activeView as xmlguiclient. Kate now
does that automatically whenever a non KTE::View is activated. We
just need to install ourself and remove when hiding.
(cherry picked from commit 742aa0d06281620248dbc960d9e219a7532e59a7)

M  +3    -26   addons/compiler-explorer/ce_widget.cpp
M  +0    -4    addons/compiler-explorer/ce_widget.h

https://invent.kde.org/utilities/kate/commit/8d8d04feebe683a8fb3cb7925adca1bfdd9b21a0