CompilerExplorer: Fix crash when minimizing

Remove the hack for removing the activeView as xmlguiclient. Kate now
does that automatically whenever a non KTE::View is activated. We
just need to install ourself and remove when hiding.

BUG: 468294